--- a/assets/config.json
+++ b/assets/config.json
@@ -1,4 +1,4 @@
 {
-  "apiUrl": "http://127.0.0.1:8081/",
+  "apiUrl": "http://35.224.152.112:8081",
   "demoVideoUrl": "https://www.youtube.com/shorts/SsX9VFt3eyY"
 }
