--- a/assets/config.json
+++ b/assets/config.json
@@ -1,4 +1,4 @@
 {
-  "apiUrl": "https://35.224.152.112:8443",
+  "apiUrl": "https://:34.57.70.53:8443",
   "demoVideoUrl": "https://www.youtube.com/shorts/SsX9VFt3eyY"
 }
