--- a/assets/config.json
+++ b/assets/config.json
@@ -1,4 +1,4 @@
 {
-  "apiUrl": "https://lawair.duckdns.org:8443",
+  "apiUrl": "https://lawair.duckdns.org",
   "demoVideoUrl": "https://www.youtube.com/shorts/SsX9VFt3eyY"
 }
